--- a/contacto.html
+++ b/contacto.html
@@ -32,7 +32,7 @@
         <ul class="nav-flex">
 
             <li class="nav-item"><a class="nav-a" href="productos.html">Productos</a></li>
-            <li class="nav-item"><a class="nav-a" href="preguntas-frecuentes.html">Preguntas frecuentes</a></li>
+            <li class="nav-item"><a class="nav-a" href="mayoristas.html">Mayoristas</a></li>
             <li class="nav-item"><a class="nav-a" href="blog.html">Blog</a></li>
             <li class="nav-item"><a class="nav-a" href="contacto.html">Contacto</a></li>                    
            
