--- a/contacto.html
+++ b/contacto.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="es-es">
     <head>
+        <!-- Para optimizar el SEO de mi sitio realicé las siguientes modificaciones:
+    -Utilizacion de las meta etiquetas "Description" y "Keywords"
+    -Implementación y uso correcto de las etiquetas "Title, H1, H2, H3, etc" en cada una de las secciones del sitio
+      -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="muebles, respaldos, deco, decoracion, hogar, capitone, tapizado, sillones, baulera, botones, tachas, diseño, interiores, ituzaingo, oeste">
+    <meta name="description" content="Envianos tu consulta para que podamos asesorarte para tener el respaldo de tus sueños">
         <title>Bruder Deco</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
