--- a/mayoristas.html
+++ b/mayoristas.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="es-es">
 <head>
+    <!-- Para optimizar el SEO de mi sitio realicé las siguientes modificaciones:
+    -Utilizacion de las meta etiquetas "Description" y "Keywords"
+    -Implementación y uso correcto de las etiquetas "Title, H1, H2, H3, etc" en cada una de las secciones del sitio
+      -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="muebles, respaldos, deco, decoracion, hogar, capitone, tapizado, sillones, baulera, botones, tachas, diseño, interiores, ituzaingo, oeste">
+    <meta name="description" content="Venta de respaldos a precios mayoristas. Ingresá y solicitá tu pedido">
     <title>Bruder Deco</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,9 +50,9 @@
 
     <h1 class="animate__animated animate__bounceInDown">Mayoristas</h1>
 
-    <p>En Bruder Deco le ofrecemos a nuestros actuales y potenciales clientes la posibilidad de realizar compras mayoristas  para sus comercios o emprendimientos sobre todas nuestras categorías de productos: Deco, Bazar, Muebles, Iluminacion, Tapiceria y Blanqueria.</p>
+    <p class="mayoristas-text">En Bruder Deco le ofrecemos a nuestros actuales y potenciales clientes la posibilidad de realizar compras mayoristas  para sus comercios o emprendimientos sobre todas nuestras categorías de productos: Deco, Bazar, Muebles, Iluminacion, Tapiceria y Blanqueria.</p>
 
-    <p>Para poder acceder a la compra mayorista es necesario enviar a nuestro mail bruderdeco@gmail.com.ar los siguientes datos:</p>
+    <p class="mayoristas-text">Para poder acceder a la compra mayorista es necesario enviar a nuestro mail bruderdeco@gmail.com.ar los siguientes datos:</p>
 
     <ol>
         <li>Nombre completo</li>
@@ -57,7 +63,21 @@
         <li>Link de pagina o redes sociales</li>
     </ol>
 
-    <p>Aquellas personas que realicen compras por mayor accederán a un descuento del 25% sobre todos los productos publicados en nuestra Tienda Online o sobre los desarrollos especiales realizados para cliente.</p>
+    <p class="clientes-mayoristas">Aquellas personas que realicen compras por mayor accederán a un descuento del 25% sobre todos los productos publicados en nuestra Tienda Online o sobre los desarrollos especiales realizados para cliente.</p>
+
+    <img class="img-semifinal" src="images/girona1.jpg" alt="Respaldo girona">
+
+    <img class="img-final" src="images/girona2.jpg" alt="Respaldo Girona">
+
+    <h2 class="title-pago">Métodos de pago</h2>
+
+    <div class="metodo-pago">
+
+        <a href="#"><i class="fab fa-paypal icono-pago icono-pagoPaypal"></i></a>
+        <a href="#"><i class="far fa-credit-card icono-pago icono-pagoCredito"></i></a>
+        <a href="#"><i class="fas fa-money-bill-wave icono-pago icono-pagoEfectivo"></i></a>             
+
+    </div>
 
     </section>
     
