--- a/contacto.html
+++ b/contacto.html
@@ -16,12 +16,14 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
          <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;500;700&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="images/icono.ico">
-        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/12ff73f3a7.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
 <body class="grid-container">
+
+    <!--HEADER-->
 
     <header class="cabecera">
 
@@ -32,6 +34,8 @@
         </div>
 
     </header>
+
+    <!--NAVBAR-->
 
     <nav class="navbar">
             
@@ -45,6 +49,8 @@
         </ul>
         
     </nav> 
+
+    <!--SECTION-->
 
     <section class="section">
 
@@ -79,6 +85,8 @@
         <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.7174824319814!2d-58.43444398519585!3d-34.5860144640677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc945173b3dd7%3A0xe8a347bb55df550c!2sCODER%20HOUSE%20%7C%20Coderhouse%20S.R.L.!5e0!3m2!1ses-419!2sar!4v1639448483916!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
     </section>
+
+    <!--FOOTER-->
 
     <footer class="footer">        
 
